# python_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT.md  CI_CD_STRATEGY.md  Dockerfile  LICENSE  LICENSING.md  NOTICE  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  readme.md
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  publish.yml
docs/: index.md
hooks/: post_gen_project.py  pre_gen_project.py
src/my_python_project/: __init__.py
tests/: test_example.py  test_main.py
{{cookiecutter.project_slug}}/: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  NOTICE.md  README.md  codecov.yml  llms.txt  mkdocs.yml  pyproject.toml  pytest.ini  renovate.json  zensical.toml
{{cookiecutter.project_slug}}/.github/: CODEOWNERS  copilot-instructions.md
{{cookiecutter.project_slug}}/.github/workflows/: ci-cd.yml  ci.yml  docker.yml  publish.yml  release.yml  security.yml
{{cookiecutter.project_slug}}/docs/: AUDIT.md  HOW_TO_GUIDE.md  index.md
{{cookiecutter.project_slug}}/scripts/: evaluate_architecture.py  semantic_diff.py  swarm_watchdog.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: __init__.py  logger.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_main.py  test_utils.py
