[tool.poetry]
name = "my_python_project"
version = "0.1.0"
description = "A best-in-class Python package template."
authors = ["CoReason, Inc. <gowtham.rao@coreason.ai>"]
readme = "README.md"
license = "Prosperity-3.0.0"
homepage = "https://github.com/[USERNAME]/[REPO_NAME]"
repository = "https://github.com/[USERNAME]/[REPO_NAME]"
documentation = "https://github.com/[USERNAME]/[REPO_NAME]"
keywords = ["template", "poetry", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.2"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
