[project]
name = "my_python_project"
version = "0.1.0"
description = "A best-in-class Python package template."
authors = [
    {name = "CoReason, Inc.", email = "gowtham.rao@coreason.ai"},
]
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
keywords = ["template", "poetry", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/[USERNAME]/[REPO_NAME]"
Repository = "https://github.com/[USERNAME]/[REPO_NAME]"
Documentation = "https://github.com/[USERNAME]/[REPO_NAME]"

[project.dependencies]
python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest-cov>=5.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
pythonpath = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
