[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
dynamic = ["version"]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
dependencies = [
    "loguru>=0.7.2",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical",
    "mypy>=1.19.1",
    "pytest-asyncio",
    "pytest-benchmark",
    "deptry",
    "deepdiff",
    "hypothesis",
    "syrupy",
    "mkdocstrings-python",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-xdist>=3.6.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TCH", "FA", "PIE", "RET", "PERF", "FURB", "LOG", "N", "A", "S"]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=100"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
